src/test/ui/synthetic-param.stderr
error[E0632]: cannot provide explicit generic arguments when `impl Trait` is used in argument position
  --> $DIR/synthetic-param.rs:20:12
   |
LL |     func::<u8>(42);
   |            ^^ explicit generic argument not allowed

error[E0632]: cannot provide explicit generic arguments when `impl Trait` is used in argument position
  --> $DIR/synthetic-param.rs:23:17
   |
LL |     Foo::func::<u8>(42);
   |                 ^^ explicit generic argument not allowed

error[E0632]: cannot provide explicit generic arguments when `impl Trait` is used in argument position
  --> $DIR/synthetic-param.rs:26:23
   |
LL |     Bar::<i8>::func::<u8>(42);
   |                       ^^ explicit generic argument not allowed

error: aborting due to 3 previous errors

